# svm-switchboard-oracle

./: .gitignore  README.md  index.ts  simulation.ts
src/consumer/: Anchor.toml
src/consumer/programs/consumer/: Cargo.toml
src/consumer/programs/consumer/src/: lib.rs
src/consumer/tests/: consumer.ts
src/oracle/: converter.ts  index.ts  package.json
